add and modify file

--- a/TicketBookingWeb.html
+++ b/TicketBookingWeb.html
@@ -6,175 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Ticket Booking</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            padding: 20px;
-            background-color: #e9ecef;
-            color: #333;
-            margin: 0;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: #007bff;
-        }
-
-        #menu {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 30px;
-            gap: 15px;
-        }
-
-        #menu button {
-            padding: 12px 25px;
-            font-size: 16px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.2s;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        #menu button:hover {
-            background-color: #0056b3;
-            transform: scale(1.05);
-        }
-
-        #plane-seats {
-            display: grid;
-            grid-template-columns: repeat(14, 40px);
-            gap: 10px;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .seat {
-            width: 40px;
-            height: 40px;
-            background-color: #28a745;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: transform 0.2s, background-color 0.3s;
-            position: relative;
-        }
-
-        .seat:hover {
-            transform: scale(1.1);
-            background-color: #218838;
-        }
-
-        .seat::after {
-            content: attr(data-info);
-            position: absolute;
-            background-color: #fff;
-            padding: 5px;
-            border: 1px solid #ccc;
-            top: -35px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 12px;
-            white-space: nowrap;
-            display: none;
-        }
-
-        .seat:hover::after {
-            display: block;
-        }
-
-        .sold {
-            background-color: #dc3545;
-            cursor: not-allowed;
-        }
-
-        .selected {
-            background-color: #ffc107;
-        }
-
-        /* Modal Styles */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.4);
-        }
-
-        .modal-content {
-            background-color: #fff;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            max-width: 500px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: left;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-        }
-
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        .form-group input[type="submit"] {
-            background-color: #28a745;
-            color: white;
-            cursor: pointer;
-            border: none;
-        }
-
-        .form-group input[type="submit"]:hover {
-            background-color: #218838;
-        }
-
-        @media (max-width: 600px) {
-            #plane-seats {
-                grid-template-columns: repeat(7, 40px);
-                gap: 5px;
-            }
-
-            #menu button {
-                padding: 10px 15px;
-                font-size: 14px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="TicketBookingWeb.css">
 </head>
 
 <body>
@@ -221,159 +53,7 @@
         </div>
     </div>
 
-    <script>
-        const rows = ['A', 'B', 'C', 'D'];
-        const seats = [14, 12, 12, 14]; // Seat counts per row
-        let seatingPlan = [];
-
-        // Initialize seating plan
-        function initSeatingPlan() {
-            rows.forEach((row, rowIndex) => {
-                let rowSeats = [];
-                for (let i = 1; i <= seats[rowIndex]; i++) {
-                    rowSeats.push(0); // 0 means available
-                    createSeatElement(row, i);
-                }
-                seatingPlan.push(rowSeats);
-            });
-        }
-
-        // Create seat elements in the DOM
-        function createSeatElement(row, number) {
-            const seat = document.createElement('div');
-            seat.className = 'seat';
-            seat.id = `${row}${number}`;
-            seat.setAttribute('data-info', `Seat ${row}${number}: Available`);
-            seat.onclick = () => selectSeat(row, number);
-            document.getElementById('plane-seats').appendChild(seat);
-        }
-
-        // Select or Deselect a Seat
-        function selectSeat(row, number) {
-            const seat = document.getElementById(`${row}${number}`);
-            const rowIndex = rows.indexOf(row);
-            if (seatingPlan[rowIndex][number - 1] === 0) { // If available
-                if (seat.classList.contains('selected')) {
-                    seat.classList.remove('selected');
-                    seat.setAttribute('data-info', `Seat ${row}${number}: Available`);
-                } else {
-                    seat.classList.add('selected');
-                    seat.setAttribute('data-info', `Seat ${row}${number}: Selected`);
-                }
-            } else {
-                alert(`Seat ${row}${number} is already sold.`);
-            }
-        }
-
-        // Show modal to confirm and process payment
-        function buySelectedSeats() {
-            const selectedSeats = document.querySelectorAll('.seat.selected');
-            if (selectedSeats.length === 0) {
-                alert('No seats selected.');
-                return;
-            }
-
-            // Display the payment modal
-            document.getElementById('paymentModal').style.display = 'block';
-        }
-
-        // Process the payment and mark seats as sold
-        function processPayment(event) {
-            event.preventDefault();
-            const cardNumber = document.getElementById('cardNumber').value;
-            const cardName = document.getElementById('cardName').value;
-            const expiryDate = document.getElementById('expiryDate').value;
-            const cvv = document.getElementById('cvv').value;
-
-            // Simple validation for demonstration (in real-world, use more robust validation)
-            if (cardNumber.length !== 16 || !cardName || !expiryDate || cvv.length !== 3) {
-                alert('Please enter valid payment details.');
-                return;
-            }
-
-            // Assuming payment is successful
-            const selectedSeats = document.querySelectorAll('.seat.selected');
-            selectedSeats.forEach(seat => {
-                const row = seat.id.charAt(0);
-                const number = parseInt(seat.id.slice(1));
-                buySeat(row, number);
-            });
-
-            closeModal();
-            alert('Payment successful! Seats have been purchased.');
-        }
-
-        // Close payment modal
-        function closeModal() {
-            document.getElementById('paymentModal').style.display = 'none';
-            document.getElementById('paymentForm').reset();
-        }
-
-        // Buy a seat
-        function buySeat(row, number) {
-            const rowIndex = rows.indexOf(row);
-            if (seatingPlan[rowIndex][number - 1] === 0) {
-                seatingPlan[rowIndex][number - 1] = 1; // Mark as sold
-                const seat = document.getElementById(`${row}${number}`);
-                seat.classList.remove('selected');
-                seat.classList.add('sold');
-                seat.setAttribute('data-info', `Seat ${row}${number}: Sold`);
-            }
-        }
-
-        // Find first available seat
-        function findFirstAvailable() {
-            for (let rowIndex = 0; rowIndex < rows.length; rowIndex++) {
-                for (let seatIndex = 0; seatIndex < seatingPlan[rowIndex].length; seatIndex++) {
-                    if (seatingPlan[rowIndex][seatIndex] === 0) {
-                        alert(`First available seat is ${rows[rowIndex]}${seatIndex + 1}`);
-                        return;
-                    }
-                }
-            }
-            alert("No available seats found.");
-        }
-
-        // Show seating plan
-        function showSeatingPlan() {
-            let plan = "Seating Plan:\n";
-            rows.forEach((row, rowIndex) => {
-                plan += row + ": ";
-                seatingPlan[rowIndex].forEach((seat, seatIndex) => {
-                    plan += (seat === 0 ? "O" : "X") + " ";
-                });
-                plan += "\n";
-            });
-            alert(plan);
-        }
-
-        // Print ticket information
-        function printTicketsInfo() {
-            let tickets = "Purchased Tickets:\n";
-            rows.forEach((row, rowIndex) => {
-                seatingPlan[rowIndex].forEach((seat, seatIndex) => {
-                    if (seat === 1) {
-                        tickets += `Seat ${rows[rowIndex]}${seatIndex + 1}\n`;
-                    }
-                });
-            });
-            alert(tickets || "No tickets purchased yet.");
-        }
-
-        // Clear all seat selections
-        function clearSelections() {
-            const selectedSeats = document.querySelectorAll('.seat.selected');
-            selectedSeats.forEach(seat => {
-                const row = seat.id.charAt(0);
-                const number = parseInt(seat.id.slice(1));
-                seat.classList.remove('selected');
-                seat.setAttribute('data-info', `Seat ${row}${number}: Available`);
-            });
-        }
-
-        // Initialize the seating plan on page load
-        initSeatingPlan();
-    </script>
+    <script src="TicketBookingWeb.js"></script>
 </body>
 
 </html>
